// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload command uploads multiple artifacts 1`] = `
Array [
  Array [
    Object {
      "build": "12345",
      "file": Object {
        "path": "existing1.json",
      },
      "job": "54321",
      "name": "renamed.json",
      "type": "application/json",
    },
  ],
  Array [
    Object {
      "build": "12345",
      "file": Object {
        "path": "existing2.json",
      },
      "job": "54321",
      "name": "renamed.json",
      "type": "application/json",
    },
  ],
]
`;

exports[`upload command uploads the artifact 1`] = `
Array [
  Object {
    "build": "12345",
    "file": Object {
      "path": "existing.json",
    },
    "job": "54321",
    "name": "renamed.json",
    "type": "application/json",
  },
]
`;

exports[`upload command uses an empty filename by default 1`] = `
Array [
  Object {
    "build": "12345",
    "file": Object {
      "path": "existing.json",
    },
    "job": "54321",
    "name": undefined,
    "type": "application/json",
  },
]
`;

exports[`upload command uses the build ID from the environment 1`] = `
Array [
  Object {
    "build": "12345",
    "file": Object {
      "path": "existing.json",
    },
    "job": "54321",
    "name": undefined,
    "type": "application/json",
  },
]
`;

exports[`upload command uses the build ID from the environment 2`] = `
Array [
  Object {
    "build": "12345",
    "file": Object {
      "path": "existing.json",
    },
    "job": "54321",
    "name": undefined,
    "type": "application/json",
  },
]
`;
